--- a/3668b54ecfa098ce53cc3f0d8495f2be-571b77ce7b269fb928413a185b6e0668837d8556/index.html
+++ b/3668b54ecfa098ce53cc3f0d8495f2be-571b77ce7b269fb928413a185b6e0668837d8556/index.html
@@ -12,17 +12,17 @@
 <div class="valentines-day">
   <div class="envelope"></div>
   <div class="heart"></div>
-  <div class="text"> PARA: <br> DAVID SEVERINO </div>
+  <div class="text"> PARA: <br> Mi Pedacito De Estrella </div>
   <div class="front"></div>
 </div>
 
 <div id="card">
   <div class="side one"></div>
   <div class="side two">
-    <h2>Para mi amorcito</h2>
-    <p>Querido David... </p>
-    <p>Tienes un culito muy hermoso, podria dormir noche tras noche sobre el... </p>
-    <p>Quiero vivir contigo y tener tu culo de sombrero toda la eternidad... te ama: la wendys</p>
+    <h2>Para mi pedacito de estrella</h2>
+    <p>Querida Maria... </p>
+    <p>Eres la persona mas maravillosa que conozco en todo el mundo y quiero que sepas que eres muy especial para mi de verdad te quiero bastante...  </p>
+    <p>Me gustaria poder estar siempre para ti pero en persona para cuidarte y que no te pase nada, de verdad eres todo para mi... te quiere con todo  corazon: el machapa</p>
   </div>
 </div>
 
